infra/terraform/networking.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(local.common_tags, {
    Name = "tfm-app-vpc"
  })
}

resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/20"
  availability_zone = "eu-south-2a"

  tags = merge(local.common_tags, {
    Name = "tfm-app-subnet-public1-eu-south-2a"
  })
}

resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.16.0/20"
  availability_zone = "eu-south-2b"

  tags = merge(local.common_tags, {
    Name = "tfm-app-subnet-public2-eu-south-2b"
  })
}

resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.128.0/20"
  availability_zone = "eu-south-2a"

  tags = merge(local.common_tags, {
    Name = "tfm-app-subnet-private1-eu-south-2a"
  })
}

resource "aws_subnet" "private_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.144.0/20"
  availability_zone = "eu-south-2b"

  tags = merge(local.common_tags, {
    Name = "tfm-app-subnet-private2-eu-south-2b"
  })
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags, {
    Name = "tfm-app-igw"
  })
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = merge(local.common_tags, {
    Name = "tfm-app-rtb-public"
  })
}

resource "aws_route_table" "private_1" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags, {
    Name = "tfm-app-rtb-private1-eu-south-2a"
  })
}

resource "aws_route_table" "private_2" {
  vpc_id = aws_vpc.main.id

  tags = merge(local.common_tags, {
    Name = "tfm-app-rtb-private2-eu-south-2b"
  })
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_1" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.private_1.id
}

resource "aws_route_table_association" "private_2" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.private_2.id
}
